@@ -11,6 +11,7 @@
 	spec bookmark.
 	(twittering-extract-timeline-spec): support timeline spec
 	bookmark.
+	(twittering-equal-string-as-timeline): add.
 
 	* test/test-twittering-mode.el (timeline-spec): add tests of
 	timeline spec normalization.
